# image-to-code

./: .gitignore  .npmignore  README.md  README.th.md  SKILL.md  opencode.json  package.json  pyproject.toml
image_to_code/: analyze.py  colors.py  layout.py  ocr.py  utils.py
powershell/: analyze-image.ps1  detect-layout.ps1  extract-colors.ps1  ocr.ps1
scripts/: postinstall.js
